--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Android_Basics_Kotlin">
-        <activity android:name=".unit1.a.CreateBirthDayCard" />
         <activity android:name=".MainActivity">
+        </activity>
+        <activity android:name=".unit1.a.BasicLayout">
+        </activity>
+        <activity android:name=".unit1.b.AddAButton">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
     </application>
 
 </manifest>
